k8s/audit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: votacao
spec:
  selector: { app: audit-service }
  ports: [{ port: 8082, targetPort: 8082 }]
