k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: votacao
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
