k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: votacao
spec:
  replicas: 1
  selector:
    matchLabels: { app: grafana }
  template:
    metadata:
      labels: { app: grafana }
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.2.0
          ports: [{ containerPort: 3000 }]
          volumeMounts:
            - { name: datasource, mountPath: /etc/grafana/provisioning/datasources }
      volumes:
        - name: datasource
          configMap: { name: grafana-datasource }
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: votacao
spec:
  selector: { app: grafana }
  ports: [{ port: 3000, targetPort: 3000 }]
