k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: votacao
spec:
  replicas: 1
  selector:
    matchLabels: { app: jaeger }
  template:
    metadata:
      labels: { app: jaeger }
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.60
          ports:
            - { containerPort: 16686, name: ui }
            - { containerPort: 4318, name: otlp-http }
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: votacao
spec:
  selector: { app: jaeger }
  ports:
    - { name: ui, port: 16686, targetPort: 16686 }
    - { name: otlp-http, port: 4318, targetPort: 4318 }
