k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: votacao
spec:
  selector: { app: result-service }
  ports: [{ port: 8081, targetPort: 8081 }]
