k8s/voting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  namespace: votacao
spec:
  selector: { app: voting-service }
  ports: [{ port: 8080, targetPort: 8080 }]
